--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,10 +1,10 @@
 /* Root Variables */
 :root {
   /* Color Palette */
-  --primary-color: #ff5900;
+  --primary-color: #b80000;
   --secondary-color: #ffb200;
   --text-color: #565656;
-  --heading-color: #111;
+  --heading-color: #141414;
   --background-color: #ebebeb;
   --light-background-color: #f1f1f1;
   --border-color: rgba(0, 0, 0, 0.15);
