--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,11 +3,12 @@
 }
 
 .header-top {
-  background: #000;
+  background: var(--primary-color);
 }
 
 .header-bottom {
-  padding: 15px 0;
+  padding: 12px 0;
+  border-bottom: 1px solid #ddd;
 }
 
 .sticky-header {
@@ -49,9 +50,25 @@
   color: var(--primary-color);
 }
 
+.header-logo {
+  width: 280px;
+  padding: 16px 0 10px;
+}
 .header-logo a {
-  display: inline-block;
-  width: 150px;
+  display: inline-flex;
+  align-items: start;
+}
+
+.header-logo a img {
+  width: 40%;
+}
+
+.header-logo a span {
+  color: #fff;
+  font-size: 28px;
+  line-height: 1;
+  margin-left: 5px;
+  font-weight: 400;
 }
 
 .cart-icon,
@@ -64,30 +81,25 @@
 }
 .main-menu > ul {
   list-style: none;
-  text-align: center;
 }
 
 .main-menu > ul > li {
   display: inline-block;
-  margin: 0 15px;
+  margin: 0 12px;
 }
 
 .main-menu > ul > li:hover > a {
-  color: #0088cc;
   color: var(--primary-color);
 }
 
 .main-menu ul > li > a {
-  color: #111111;
+  color: var(--heading-color);
   border: solid transparent;
   border-width: 2px 0;
-  padding: 15px 0;
   display: block;
   position: relative;
   font-family: "Futura, sans-serif";
-  font-size: 16px;
   display: inline-block;
-  font-weight: 700;
 }
 
 .main-menu ul > li > a::after {
@@ -95,9 +107,8 @@
   content: "";
   width: 0;
   height: 2px;
-  background: #0088cc;
   background: var(--primary-color);
-  top: 100%;
+  bottom: -15px;
   left: 0;
   transition: width 0.2s linear;
 }
