--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,3 +101,217 @@
 }
 
 /* cto css end */
+
+/* live page css start  */
+
+.banner-area {
+  background: #141414;
+  padding: 0;
+}
+
+.live-text {
+  display: flex;
+  align-items: center;
+  column-gap: 12px;
+  color: #11f1f1;
+  margin-bottom: 24px;
+}
+
+.banner-title {
+  color: #fff;
+  margin-bottom: 24px;
+}
+
+.banner-description {
+  color: #fff;
+}
+
+.live-left-wrap {
+  background: #f6f6f6;
+  margin-bottom: 24px;
+  padding: 16px;
+}
+
+.live-mid-wrap {
+  border-top: 2px solid var(--primary-color);
+  background: #f6f6f6;
+  margin-bottom: 24px;
+  padding: 60px 16px 20px;
+  position: relative;
+}
+
+.live-mid-time {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 4px;
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.live-mid-wrap-title {
+  margin-bottom: 24px;
+}
+
+.live-mid-wrap-title h5 {
+  font-weight: 600;
+}
+
+.live-left-list ul,
+.live-mid-list ul {
+  padding-left: 20px;
+}
+
+.live-left-list ul li,
+.live-mid-list ul li {
+  margin-bottom: 12px;
+}
+
+.live-mid-description p {
+  margin-bottom: 12px;
+}
+
+.live-mid-img {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.source-img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #00000080;
+  color: #fff;
+  font-size: 14px;
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+.img-caption {
+  border-left: 1px solid #141414;
+  padding-left: 12px;
+}
+
+.live-mid-btn a {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 16px;
+  background: #fff;
+  border: 2px solid #000;
+  column-gap: 8px;
+}
+
+.live-mid-btn a:hover {
+  color: #fff;
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.live-mid-btn a:hover span {
+  text-decoration: none;
+}
+
+/* live page css end  */
+
+/* article page css start  */
+
+.article-area {
+  background: #f6f6f6;
+}
+
+.article-wrap {
+  margin-bottom: 50px;
+}
+
+.article-reporter {
+  margin: 50px 0 16px;
+}
+
+.reporter-name {
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+.reporter-address {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.reporter-address::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -20px;
+  width: 50px;
+  height: 2px;
+  background-color: #141414;
+}
+
+.report-description p {
+  margin-bottom: 30px;
+}
+
+.follow-report {
+  margin-bottom: 30px;
+}
+
+.follow-report a {
+  text-decoration: underline;
+  text-decoration-color: var(--primary-color);
+  text-underline-offset: 5px;
+}
+
+.follow-report a:hover {
+  color: var(--primary-color);
+}
+
+.other-article-link {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  padding: 24px;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 24px;
+  height: 165px;
+  min-height: max-content;
+  box-shadow: 0 0 5px #00000020;
+}
+
+.other-article-link:hover {
+  box-shadow: 0 0 10px #00000040;
+}
+
+.other-article-link span {
+  font-weight: 600;
+}
+
+.article-keyword-wrap {
+  margin: 100px 0;
+}
+
+.article-keyword-list ul {
+  list-style: none;
+}
+
+.article-keyword-list ul li {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.article-keyword-list ul li:last-child {
+  margin-right: 0;
+}
+
+.article-keyword-list ul li a {
+  background: #fff;
+  padding: 8px 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+/* article page css end */
