--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,11 @@
   margin-bottom: 10px;
 }
 
+.news-wrap {
+  display: block;
+  margin-bottom: 24px;
+}
+
 .news-wrap h3 {
   line-height: 40px;
   margin-bottom: 24px;
@@ -16,6 +21,11 @@
 
 .news-wrap .news-description {
   margin-bottom: 12px;
+}
+
+.news-wrap.with-video .news-description {
+  margin-bottom: 20px;
+  line-height: 35px;
 }
 
 .news-wrap:hover .news-title {
@@ -105,7 +115,7 @@
 /* live page css start  */
 
 .banner-area {
-  background: #141414;
+  background: var(--text-color);
   padding: 0;
 }
 
@@ -176,6 +186,15 @@
   position: relative;
 }
 
+.live-mid-img img {
+  width: 100%;
+}
+
+.live-mid-img video {
+  display: none;
+  max-width: 100%;
+}
+
 .source-img {
   position: absolute;
   bottom: 0;
@@ -187,9 +206,27 @@
   text-transform: uppercase;
 }
 
+.news-wrap.with-video .source-img {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px 40px 8px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.news-wrap.with-video .source-img:hover {
+  background: var(--primary-color);
+}
+
+.news-wrap.with-video .source-img i {
+  font-size: 32px;
+}
+
 .img-caption {
-  border-left: 1px solid #141414;
+  border-left: 1px solid var(--text-color);
   padding-left: 12px;
+  margin-top: -10px;
 }
 
 .live-mid-btn a {
@@ -245,7 +282,7 @@
   bottom: -20px;
   width: 50px;
   height: 2px;
-  background-color: #141414;
+  background-color: var(--text-color);
 }
 
 .report-description p {
@@ -274,8 +311,6 @@
   justify-content: space-between;
   gap: 20px;
   margin-bottom: 24px;
-  height: 165px;
-  min-height: max-content;
   box-shadow: 0 0 5px #00000020;
 }
 
@@ -312,6 +347,53 @@
   justify-content: center;
   font-size: 14px;
   font-weight: 500;
+}
+
+.article-right-links {
+  margin-bottom: 60px;
+}
+
+.article-right-links .card {
+  margin-bottom: 24px;
+}
+
+.article-right-links .card-body {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.article-video-links a {
+  display: inline-flex;
+  column-gap: 12px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid var(--text-color);
+}
+
+.article-video-links a:last-child {
+  border-bottom: 0;
+}
+
+.article-video-links a .news-img {
+  width: 75%;
+}
+
+.article-video-links a .video-item {
+  padding: 5px 10px;
+}
+
+.article-video-links a .video-item i {
+  font-size: 16px;
+}
+
+.article-video-links a:hover .video-item span {
+  text-decoration: none;
+}
+
+.article-video-links a:hover h6 {
+  text-decoration: underline;
 }
 
 /* article page css end */
