--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -333,6 +333,7 @@
 .article-keyword-list ul li {
   display: inline-block;
   margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 .article-keyword-list ul li:last-child {
